[metadata]
name=raspy
version=0.1

[files]
packages =
    raspy

[flake8]
ignore = N801, E203, E266, E501, W503, F812, E741, N803, N802, N806
exclude = .git,__pycache__,examples/*,old,build,dist

[isort]
profile=black
src_paths=minitorch,test

[mypy]
strict = True
ignore_missing_imports = True
exclude=^(raspy/test)|(examples/)
implicit_reexport = True

[mypy-tests.*]
disallow_untyped_decorators = False
implicit_reexport = True

[black]
exclude=^(docs/)|(project/)|(assignments/)

